# DroppingOut

./: .gitignore  README.md  transcribe.sh
Tr-Tr-Trevor/: Cargo.toml
tr-tr-trevor/: Cargo.toml  audio  start_bot.sh  whisper_tr_tr.sh
tr-tr-trevor/src/: main.rs
tr-tr-trevor/src/commands/: disconnect.rs  mod.rs  transcribe.rs
