[package]
name = "tr-tr-trevor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version="0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "voice", "http"] }
songbird = "0.3.0"
audiopus = "0.2"
tokio = {version="1.21.2", features=["rt-multi-thread", "macros"]}
